--- a/app/src/main/res/layout/activity_heart.xml
+++ b/app/src/main/res/layout/activity_heart.xml
@@ -13,7 +13,18 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="?attr/actionBarTheme">
+        <Button
+            android:id="@+id/questionBtn"
+            android:layout_marginLeft="310dp"
+            android:layout_marginTop="9dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/question_mark_btn">
+        </Button>
+
+    </androidx.appcompat.widget.Toolbar>
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -28,29 +39,26 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/questionBtn"
-                    android:layout_marginLeft="340dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:background="@drawable/question_mark_btn">
-                </Button>
                 <TextView
+                    android:layout_marginTop="50dp"
                     android:textSize="18dp"
                     android:id="@+id/textMon"
-                    android:textColor="@android:color/black"
+                    android:text="2019 년 11 월 16 일 12 : 29 AM  "
+                    android:visibility="gone"
+                    android:textStyle="bold"
+                    android:textColor="@color/maincolor1"
                     android:textAlignment="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
                 <ImageView
                     android:id="@+id/fingerImage"
-                    android:layout_marginTop="20dp"
+                    android:layout_width="330dp"
+                    android:layout_height="250dp"
                     android:layout_gravity="center_horizontal"
-                    android:layout_width="300dp"
-                    android:layout_height="240dp"
-                    android:src="@drawable/bpm_image">
+                    android:layout_marginTop="20dp"
+                    android:src="@drawable/phone_image"
+                    android:visibility="visible">
 
                 </ImageView>
 
@@ -66,9 +74,10 @@
 
                 <ImageView
                     android:id="@+id/beatanim"
-                    android:layout_marginTop="20dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_marginTop="200dp"
+                    android:layout_width="400dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_height="300dp"
                     app:srcCompat="@drawable/heart_rate" />
             </LinearLayout>
 
@@ -76,7 +85,7 @@
                 android:id="@+id/end_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
                 android:orientation="vertical"
                 android:visibility="gone">
 
@@ -111,6 +120,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/bpmseekbar"
+                        android:textColor="@color/black"
                         android:layout_marginLeft="54dp"
                         android:text="@string/min_bpm">
 
@@ -121,15 +131,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/bpmseekbar"
-                        android:layout_marginLeft="330dp"
-                        android:text="@string/max_bpm"></TextView>
+                        android:layout_marginLeft="355dp"
+                        android:textColor="@color/black"
+                        android:text="@string/max_bpm">
+                    </TextView>
                 </RelativeLayout>
                 <!--select icon-->
                 <LinearLayout
-                    android:layout_width="330dp"
+                    android:layout_width="370dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="55dp"
                     android:orientation="vertical">
 
                     <TextView
@@ -137,8 +149,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:text="Select Status"
-                        android:textSize="18dp"></TextView>
+                        android:text="현재 상태를 선택해 주세요."
+                        android:letterSpacing="0.15"
+                        android:textSize="16dp"></TextView>
 
                     <LinearLayout
                         android:layout_width="330dp"
@@ -213,7 +226,7 @@
                         android:layout_width="350dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="60dp"
                         android:layout_weight="1"
                         android:orientation="horizontal"
                         android:visibility="visible">
@@ -225,9 +238,10 @@
                             android:layout_gravity="center_horizontal"
                             android:layout_margin="10dp"
                             android:layout_weight="1"
-                            android:background="@drawable/btn_bpm_again"
+                            android:background="@drawable/button2"
                             android:padding="3dp"
-                            android:text="again"
+                            android:text="측정"
+                            android:textStyle="bold"
                             android:textColor="@color/white"
                             android:typeface="normal" />
 
@@ -238,10 +252,11 @@
                             android:layout_gravity="center_horizontal"
                             android:layout_margin="10dp"
                             android:layout_weight="1"
-                            android:background="@drawable/btn_history_graph"
+                            android:background="@drawable/button3"
                             android:padding="3dp"
-                            android:text="STORE"
-                            android:textColor="@color/white"
+                            android:text="저장"
+                            android:textStyle="bold"
+                            android:textColor="@color/maincolor1"
                             android:typeface="normal" />
                     </LinearLayout>
                 </LinearLayout>
@@ -252,12 +267,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="100dp"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:id="@+id/firstBtn_layout"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="50dp"
                     android:visibility="visible"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
@@ -270,9 +285,10 @@
                         android:layout_centerVertical="true"
                         android:layout_gravity="center_horizontal"
                         android:layout_margin="10dp"
-                        android:background="@drawable/btn_bpm_drawable"
+                        android:background="@drawable/button2"
                         android:padding="15dp"
                         android:text="BPM  측정하기"
+                        android:textStyle="bold"
                         android:textColor="@color/white"
                         android:typeface="normal" />
 
@@ -283,12 +299,13 @@
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
                         android:layout_gravity="center_horizontal"
-                        android:layout_margin="40dp"
-                        android:background="@drawable/btn_history_drawable"
+                        android:layout_margin="60dp"
+                        android:background="@drawable/button3"
                         android:padding="15dp"
-                        android:text="BPM 그래프"
-                        android:textColor="@color/white"
-                        android:typeface="normal"/>
+                        android:text="심박수 기록"
+                        android:textColor="@color/maincolor1"
+                        android:textStyle="bold"
+                        android:typeface="normal" />
 
                 </LinearLayout>
             </LinearLayout>
