--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -70,9 +70,9 @@
                 android:id="@+id/timeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="200dp"
+                android:layout_marginStart="160dp"
                 android:layout_marginTop="16dp"
-                android:text="18 :50"
+                android:text="18 :50  PM"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="22sp" />
