--- a/app/src/main/res/layout/data_check.xml
+++ b/app/src/main/res/layout/data_check.xml
@@ -12,21 +12,27 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:background="@drawable/custom_edge"
         app:layout_constraintBottom_toBottomOf="@+id/textView9"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintEnd_toEndOf="@+id/checkView"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/smoketxt" />
 
     <TextView
         android:id="@+id/gendertxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/custom_edge"
         android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
+        app:layout_constraintEnd_toEndOf="@+id/checkView"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toTopOf="@+id/checkView" />
 
     <TextView
         android:id="@+id/smoketxt"
@@ -34,9 +40,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:background="@drawable/custom_edge"
         app:layout_constraintBottom_toBottomOf="@+id/textView8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintEnd_toEndOf="@+id/checkView"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/choltxt" />
 
     <TextView
@@ -45,9 +54,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="@+id/checkView"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/aplotxt" />
 
     <TextView
@@ -56,9 +67,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="@+id/checkView"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/aphitxt" />
 
     <TextView
@@ -67,9 +80,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="@+id/checkView"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/weighttxt" />
 
     <TextView
@@ -78,9 +93,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintEnd_toEndOf="@+id/checkView"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/heighttxt" />
 
     <TextView
@@ -88,10 +105,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
-        android:text="TextView"
+        android:text="150.0"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="@+id/checkView"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/agetxt" />
 
     <TextView
@@ -100,9 +119,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
-        android:text="음주여부"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="ㆍ 음주여부"
+        android:textColor="#F79494"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/checkView"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
@@ -111,9 +132,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
-        android:text="생년월일"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="ㆍ 생년월일"
+        android:textColor="#F79494"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/checkView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
@@ -122,9 +145,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
-        android:text="최저혈압"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="ㆍ 최저혈압"
+        android:textColor="#F79494"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/checkView"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
@@ -133,9 +158,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
-        android:text="콜레스테롤"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="ㆍ 콜레스테롤"
+        android:textColor="#F79494"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/checkView"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
@@ -144,9 +171,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
-        android:text="최고혈압"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="ㆍ 최고혈압"
+        android:textColor="#F79494"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/checkView"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
@@ -155,9 +184,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
-        android:text="체중"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="ㆍ 체중"
+        android:textColor="#F79494"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/checkView"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
@@ -165,11 +196,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="30dp"
-        android:text="성별"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
+        android:layout_marginTop="24dp"
+        android:text="ㆍ 성별"
+        android:textColor="#F79494"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/checkView"
+        app:layout_constraintTop_toTopOf="@+id/checkView" />
 
     <TextView
         android:id="@+id/textView2"
@@ -177,9 +210,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
-        android:text="신장"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="ㆍ 신장"
+        android:textColor="#F79494"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/checkView"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
@@ -188,20 +223,25 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
-        android:text="흡연여부"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="ㆍ 흡연여부"
+        android:textColor="#F79494"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/checkView"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/agetxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/custom_edge"
         android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="@+id/checkView"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/gendertxt" />
 
     <Button
@@ -209,9 +249,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="92dp"
-        android:layout_marginBottom="16dp"
-        android:onClick="clickPredict"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/button2"
+        android:onClick="clickPredict"
         android:text="예측하기"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -220,9 +260,9 @@
         android:id="@+id/changeBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:onClick="clickChange"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/button2"
+        android:onClick="clickChange"
         android:text="수정하기"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -230,47 +270,57 @@
         app:layout_constraintStart_toEndOf="@+id/predictBtn" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/cm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="cm"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/heighttxt"
         app:layout_constraintStart_toEndOf="@+id/heighttxt" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/kg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="kg"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/weighttxt"
         app:layout_constraintStart_toEndOf="@+id/weighttxt" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/mmhg1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="mmHg"
+        android:textColor="#000000"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/aphitxt"
         app:layout_constraintStart_toEndOf="@+id/aphitxt" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/mmhg2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="mmHg"
+        android:textColor="#000000"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/aplotxt"
         app:layout_constraintStart_toEndOf="@+id/aplotxt" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/mgdl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="mg/dl"
+        android:textColor="#000000"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/choltxt"
         app:layout_constraintStart_toEndOf="@+id/choltxt" />
 
@@ -283,4 +333,39 @@
         android:theme="?attr/actionBarTheme"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="3dp" />
+
+    <View
+        android:id="@+id/checkView"
+        android:layout_width="match_parent"
+        android:layout_height="620dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/view_border"
+        app:layout_constraintBottom_toTopOf="@+id/predictBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="122dp" />
+
+    <View
+        android:id="@+id/heightView"
+        android:layout_width="85dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/custom_edge"
+        app:layout_constraintEnd_toEndOf="@+id/checkView"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/agetxt" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
