--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -66,6 +66,16 @@
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="21sp"/>
+            <TextView
+                android:id="@+id/dateText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="110dp"
+                android:layout_marginTop="16dp"
+                android:text="2019 . 11 . 10 "
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="21sp"/>
         </LinearLayout>
 
         <ImageView
@@ -88,7 +98,7 @@
                 android:layout_marginTop="20dp"
                 android:text="Good Morning!!"
                 android:textColor="@color/white"
-                android:letterSpacing="0.15"
+                android:letterSpacing="0.2"
                 android:textStyle="bold"
                 android:textSize="23sp" />
 
