--- a/app/src/main/res/layout/toast_design2.xml
+++ b/app/src/main/res/layout/toast_design2.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/toast_design_root">
+    android:id="@+id/toast_design_root2">
     <TextView
         android:id="@+id/TextView_toast_design"
         android:layout_width="wrap_content"
@@ -10,8 +10,8 @@
         android:textSize="12dp"
         android:textStyle="bold"
         android:text=""
-        android:textColor="@color/white"
-        android:background="@drawable/toast_design_bg" />
+        android:textColor="@color/maincolor1"
+        android:background="@drawable/toast_design_bg2" />
 
 
 
