--- a/app/src/main/res/layout/userdata_input.xml
+++ b/app/src/main/res/layout/userdata_input.xml
@@ -27,6 +27,7 @@
         android:layout_marginBottom="24dp"
         android:background="@drawable/button2"
         android:text="저장하기"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -38,7 +39,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:text="생년월일"
-        android:letterSpacing="0.12"
+        android:letterSpacing="0.1"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/checkView"
@@ -51,7 +52,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
         android:text="신장"
-        android:letterSpacing="0.12"
+        android:letterSpacing="0.1"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/checkView"
@@ -64,7 +65,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
         android:text="몸무게"
-        android:letterSpacing="0.12"
+        android:letterSpacing="0.1"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/checkView"
@@ -77,7 +78,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
         android:text="최고혈압"
-        android:letterSpacing="0.12"
+        android:letterSpacing="0.1"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/checkView"
@@ -90,7 +91,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
         android:text="최저혈압"
-        android:letterSpacing="0.12"
+        android:letterSpacing="0.1"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/checkView"
@@ -103,7 +104,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
         android:text="콜레스테롤"
-        android:letterSpacing="0.12"
+        android:letterSpacing="0.1"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/checkView"
@@ -116,7 +117,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
         android:text="흡연여부"
-        android:letterSpacing="0.12"
+        android:letterSpacing="0.1"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/checkView"
@@ -129,7 +130,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="40dp"
         android:text="음주여부"
-        android:letterSpacing="0.12"
+        android:letterSpacing="0.1"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/checkView"
@@ -142,7 +143,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="45dp"
         android:text="성별"
-        android:letterSpacing="0.12"
+        android:letterSpacing="0.1"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/checkView"
