--- a/app/src/main/res/layout/cardio_predict.xml
+++ b/app/src/main/res/layout/cardio_predict.xml
@@ -108,6 +108,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/circularProgressbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
